--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^8.2.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   }
 }
